[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/enemy_slime.png" type="Texture" id=1]
[ext_resource path="res://objects/enemies/basic_enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.69055, 7.37502 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 113.555, 19.7641 )

[sub_resource type="Animation" id=3]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="Slime" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 29
script = ExtResource( 2 )
id = "slime"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.445, -7.366 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.445, -16.01 )
texture = ExtResource( 1 )
hframes = 22

[node name="AreaDetectPlayer" type="Area2D" parent="Sprite"]
visible = false
show_behind_parent = true
position = Vector2( -10, -67 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AreaDetectPlayer"]
position = Vector2( -17.5547, 64.7641 )
shape = SubResource( 2 )

[node name="RayCastFront" type="RayCast2D" parent="Sprite"]
position = Vector2( -11.9943, 4.03389 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 6 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -18.2359 )
scale = Vector2( 5.71704, 4.29111 )
process_parent = true
physics_process_parent = true

[node name="TimerToChangeFacing" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerHurt" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
__meta__ = {
"_editor_description_": "activado al ser herido, mientras esté activo no podrá ser herido"
}
[connection signal="body_entered" from="Sprite/AreaDetectPlayer" to="." method="_on_AreaDetectPlayer_body_entered"]
[connection signal="body_exited" from="Sprite/AreaDetectPlayer" to="." method="_on_AreaDetectPlayer_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="timeout" from="TimerToChangeFacing" to="." method="_on_TimerToChangeFacing_timeout"]
[connection signal="timeout" from="TimerHurt" to="." method="_on_TimerHurt_timeout"]
